k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: banking-app-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: banking-app

  template:
    metadata:
      labels:
        app: banking-app

    spec:
      containers:
      - name: banking-app

        image: 33352005/banking-app:latest


        ports:
        - containerPort: 5000
