k8s/green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: banking-app-green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: banking-app-green

  template:
    metadata:
      labels:
        app: banking-app-green

    spec:
      containers:
      - name: banking-app-green

        image: 33352005/banking-app:latest


        ports:
        - containerPort: 5000
