k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: banking-app-service

spec:
  selector:
    app: banking-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
